# rules_scala

./: .bazelrc  MODULE.bazel  WORKSPACE  WORKSPACE.bzlmod  cross-compilation-doc.md  dangerous_test_thirdparty_version.sh  extensions.bzl  scala_config.bzl  test_all.sh  test_cross_build.sh  test_rules_scala.sh
examples/crossbuild/: WORKSPACE
extensions/: bazelci_ext.bzl  ci_tools.bzl  extension_utils.bzl  non_module_deps.bzl  scala_2_13_ext.bzl  scala_2_ext.bzl  scala_3_1_ext.bzl  scala_3_ext.bzl  scala_config_ext.bzl  scala_ext.bzl
scala/: BUILD  bootstrap.bzl  repository.bzl  scala.bzl  scala_cross_version.bzl  scala_maven_import_external.bzl  scala_toolchain.bzl  toolchains.bzl
scala/private/: common_attributes.bzl  common_outputs.bzl  rule_impls.bzl
scala/private/macros/: scala_repositories.bzl  setup_scala_toolchain.bzl
scala/private/phases/: phase_collect_jars.bzl  phase_compile.bzl
scala/private/rules/: scala_binary.bzl  scala_junit_test.bzl  scala_library.bzl  scala_repl.bzl  scala_test.bzl
scala/scalafmt/: BUILD  scalafmt_repositories.bzl  setup_scalafmt_toolchain.bzl
scala/scalafmt/scalafmt/: Main.scala
scala/scalafmt/toolchain/: setup_scalafmt_toolchain.bzl  toolchain.bzl
scala/support/: support.bzl
scala/versions/: BUILD  versions.bzl
scala_proto/: scala_proto_toolchain.bzl
scala_proto/private/: scala_proto_aspect.bzl
scalatest/: scalatest.bzl
src/java/io/bazel/rulesscala/scalac/: BUILD  ReportableMainClass.java  ScalacInvoker.java  ScalacInvoker3.java  scalac.bzl
src/java/io/bazel/rulesscala/scalac/compileoptions/: CompileOptions.java
src/java/io/bazel/rulesscala/scalac/deps_tracking_reporter/: BUILD
src/java/io/bazel/rulesscala/scalac/deps_tracking_reporter/after_2_12_13_and_before_2_13_12/: DepsTrackingReporter.java
src/java/io/bazel/rulesscala/scalac/deps_tracking_reporter/after_2_13_12/: DepsTrackingReporter.java
src/java/io/bazel/rulesscala/scalac/deps_tracking_reporter/before_2_12_13/: DepsTrackingReporter.java
src/java/io/bazel/rulesscala/scalac/reporter/: BUILD
test/: BUILD
test/proto_cross_repo_boundary/: repo.bzl
test/shell/: test_cross_build.sh  test_scala_config.sh  test_scala_library.sh  test_semanticdb.sh  test_strict_dependency.sh  test_unused_dependency.sh
test/src/main/resources/scalarules/test/: BUILD
test/src/main/scala/scalarules/test/resources/: BUILD  ScalaLibResourcesFromExternalDepTest.scala  ScalaLibResourcesFromExternalScalaTest.scala
test/src/main/scala/scalarules/test/scala_import/: BUILD
test/src/main/scala/scalarules/test/sources_jars_in_deps/: BUILD
test_cross_build/: WORKSPACE
test_cross_build/src/main/: BUILD  Greeting2.scala  Greeting3.scala
test_cross_build/src/main/scalafmt/: BUILD
test_cross_build/src/test/: BUILD  Greeting2Test.scala  Greeting3Test.scala
test_expect_failure/missing_direct_deps/external_deps/: BUILD
test_expect_failure/scala_import/: BUILD
test_version/: WORKSPACE.template
test_version/version_specific_tests_dir/: BUILD
test_version/version_specific_tests_dir/versions/: version_specific.bzl
testing/: BUILD  scalatest.bzl  testing.bzl
twitter_scrooge/: BUILD  twitter_scrooge.bzl
