module(name = "io_bazel_rules_scala")

bazel_dep(name = "bazel_skylib", version = "1.4.1")
bazel_dep(name = "rules_cc", version = "0.0.6")
bazel_dep(name = "rules_java", version = "5.5.0")
bazel_dep(name = "rules_proto", version = "5.3.0-21.7")

use_repo(
    use_extension("//:extensions/scala_config_ext.bzl", "scala_config_dep"),
    "io_bazel_rules_scala_config"
)

non_module_deps = use_extension("//:extensions/non_module_deps.bzl", "non_module_deps")
use_repo(non_module_deps, "scala_compiler_source")
use_repo(non_module_deps, "io_bazel_rules_scala_scala_library")
use_repo(non_module_deps, "io_bazel_rules_scala_scala_compiler")
use_repo(non_module_deps, "io_bazel_rules_scala_scala_xml")
use_repo(non_module_deps, "io_bazel_rules_scala_scala_parser_combinators")
use_repo(non_module_deps, "io_bazel_rules_scala_scala_interfaces")
use_repo(non_module_deps, "io_bazel_rules_scala_scala_reflect")
use_repo(non_module_deps, "org_scalameta_semanticdb_scalac")
use_repo(non_module_deps, "io_bazel_rules_scala_scala_tasty_core")
use_repo(non_module_deps, "io_bazel_rules_scala_scala_asm")
use_repo(non_module_deps, "io_bazel_rules_scala_org_openjdk_jmh_jmh_core")
use_repo(non_module_deps, "io_bazel_rules_scala_org_openjdk_jmh_jmh_generator_asm")
use_repo(non_module_deps, "io_bazel_rules_scala_org_openjdk_jmh_jmh_generator_reflection")
use_repo(non_module_deps, "io_bazel_rules_scala_org_ows2_asm_asm")
use_repo(non_module_deps, "io_bazel_rules_scala_net_sf_jopt_simple_jopt_simple")
use_repo(non_module_deps, "io_bazel_rules_scala_org_apache_commons_commons_math3")
use_repo(non_module_deps, "scala_proto_rules_scalapb_plugin")
use_repo(non_module_deps, "scala_proto_rules_protoc_bridge")
use_repo(non_module_deps, "scala_proto_rules_scalapb_runtime")
use_repo(non_module_deps, "scala_proto_rules_scalapb_runtime_grpc")
use_repo(non_module_deps, "scala_proto_rules_scalapb_lenses")
use_repo(non_module_deps, "scala_proto_rules_scalapb_fastparse")
use_repo(non_module_deps, "scala_proto_rules_grpc_core")
use_repo(non_module_deps, "scala_proto_rules_grpc_api")
use_repo(non_module_deps, "scala_proto_rules_grpc_stub")
use_repo(non_module_deps, "scala_proto_rules_grpc_protobuf")
use_repo(non_module_deps, "scala_proto_rules_grpc_netty")
use_repo(non_module_deps, "scala_proto_rules_grpc_context")
use_repo(non_module_deps, "scala_proto_rules_perfmark_api")
use_repo(non_module_deps, "scala_proto_rules_guava")
use_repo(non_module_deps, "scala_proto_rules_google_instrumentation")
use_repo(non_module_deps, "scala_proto_rules_netty_codec")
use_repo(non_module_deps, "scala_proto_rules_netty_codec_http")
use_repo(non_module_deps, "scala_proto_rules_netty_codec_socks")
use_repo(non_module_deps, "scala_proto_rules_netty_codec_http2")
use_repo(non_module_deps, "scala_proto_rules_netty_handler")
use_repo(non_module_deps, "scala_proto_rules_netty_buffer")
use_repo(non_module_deps, "scala_proto_rules_netty_transport")
use_repo(non_module_deps, "scala_proto_rules_netty_resolver")
use_repo(non_module_deps, "scala_proto_rules_netty_common")
use_repo(non_module_deps, "scala_proto_rules_netty_handler_proxy")
use_repo(non_module_deps, "scala_proto_rules_opencensus_api")
use_repo(non_module_deps, "scala_proto_rules_opencensus_impl")
use_repo(non_module_deps, "scala_proto_rules_disruptor")
use_repo(non_module_deps, "scala_proto_rules_opencensus_impl_core")
use_repo(non_module_deps, "scala_proto_rules_opencensus_contrib_grpc_metrics")

register_toolchains("@io_bazel_rules_scala//jmh:jmh_toolchain")
register_toolchains("@io_bazel_rules_scala//scala_proto:default_deps_toolchain")
