module(name = "io_bazel_rules_scala")

bazel_dep(name = "bazel_skylib", version = "1.4.1")
bazel_dep(name = "rules_cc", version = "0.0.6")
bazel_dep(name = "rules_java", version = "5.5.0")
bazel_dep(name = "rules_proto", version = "5.3.0-21.7")
bazel_dep(name = "rules_python", version = "0.28.0")
bazel_dep(name = "protobuf", version = "21.7", repo_name = "com_google_protobuf")

use_repo(
    use_extension("//:extensions/scala_config_ext.bzl", "scala_config_dep"),
    "io_bazel_rules_scala_config"
)

non_module_deps = use_extension("//:extensions/non_module_deps.bzl", "non_module_deps")
use_repo(non_module_deps, "scala_compiler_source")
use_repo(non_module_deps, "io_bazel_rules_scala_scala_library")
use_repo(non_module_deps, "io_bazel_rules_scala_scala_compiler")
use_repo(non_module_deps, "io_bazel_rules_scala_scala_xml")
use_repo(non_module_deps, "io_bazel_rules_scala_scala_parser_combinators")
use_repo(non_module_deps, "io_bazel_rules_scala_scala_interfaces")
use_repo(non_module_deps, "io_bazel_rules_scala_scala_reflect")
use_repo(non_module_deps, "org_scalameta_semanticdb_scalac")
use_repo(non_module_deps, "io_bazel_rules_scala_scala_tasty_core")
use_repo(non_module_deps, "io_bazel_rules_scala_scala_asm")
use_repo(non_module_deps, "io_bazel_rules_scala_org_openjdk_jmh_jmh_core")
use_repo(non_module_deps, "io_bazel_rules_scala_org_openjdk_jmh_jmh_generator_asm")
use_repo(non_module_deps, "io_bazel_rules_scala_org_openjdk_jmh_jmh_generator_reflection")
use_repo(non_module_deps, "io_bazel_rules_scala_org_ows2_asm_asm")
use_repo(non_module_deps, "io_bazel_rules_scala_net_sf_jopt_simple_jopt_simple")
use_repo(non_module_deps, "io_bazel_rules_scala_org_apache_commons_commons_math3")
use_repo(non_module_deps, "scala_proto_rules_scalapb_plugin")
use_repo(non_module_deps, "scala_proto_rules_protoc_bridge")
use_repo(non_module_deps, "scala_proto_rules_scalapb_runtime")
use_repo(non_module_deps, "scala_proto_rules_scalapb_runtime_grpc")
use_repo(non_module_deps, "scala_proto_rules_scalapb_lenses")
use_repo(non_module_deps, "scala_proto_rules_scalapb_fastparse")
use_repo(non_module_deps, "scala_proto_rules_grpc_core")
use_repo(non_module_deps, "scala_proto_rules_grpc_api")
use_repo(non_module_deps, "scala_proto_rules_grpc_stub")
use_repo(non_module_deps, "scala_proto_rules_grpc_protobuf")
use_repo(non_module_deps, "scala_proto_rules_grpc_netty")
use_repo(non_module_deps, "scala_proto_rules_grpc_context")
use_repo(non_module_deps, "scala_proto_rules_perfmark_api")
use_repo(non_module_deps, "scala_proto_rules_guava")
use_repo(non_module_deps, "scala_proto_rules_google_instrumentation")
use_repo(non_module_deps, "scala_proto_rules_netty_codec")
use_repo(non_module_deps, "scala_proto_rules_netty_codec_http")
use_repo(non_module_deps, "scala_proto_rules_netty_codec_socks")
use_repo(non_module_deps, "scala_proto_rules_netty_codec_http2")
use_repo(non_module_deps, "scala_proto_rules_netty_handler")
use_repo(non_module_deps, "scala_proto_rules_netty_buffer")
use_repo(non_module_deps, "scala_proto_rules_netty_transport")
use_repo(non_module_deps, "scala_proto_rules_netty_resolver")
use_repo(non_module_deps, "scala_proto_rules_netty_common")
use_repo(non_module_deps, "scala_proto_rules_netty_handler_proxy")
use_repo(non_module_deps, "scala_proto_rules_opencensus_api")
use_repo(non_module_deps, "scala_proto_rules_opencensus_impl")
use_repo(non_module_deps, "scala_proto_rules_disruptor")
use_repo(non_module_deps, "scala_proto_rules_opencensus_impl_core")
use_repo(non_module_deps, "scala_proto_rules_opencensus_contrib_grpc_metrics")
use_repo(non_module_deps, "io_bazel_rules_scala_scalatest")
use_repo(non_module_deps, "io_bazel_rules_scala_scalatest_compatible")
use_repo(non_module_deps, "io_bazel_rules_scala_scalatest_core")
use_repo(non_module_deps, "io_bazel_rules_scala_scalatest_featurespec")
use_repo(non_module_deps, "io_bazel_rules_scala_scalatest_flatspec")
use_repo(non_module_deps, "io_bazel_rules_scala_scalatest_freespec")
use_repo(non_module_deps, "io_bazel_rules_scala_scalatest_funsuite")
use_repo(non_module_deps, "io_bazel_rules_scala_scalatest_funspec")
use_repo(non_module_deps, "io_bazel_rules_scala_scalatest_matchers_core")
use_repo(non_module_deps, "io_bazel_rules_scala_scalatest_shouldmatchers")
use_repo(non_module_deps, "io_bazel_rules_scala_scalatest_mustmatchers")
use_repo(non_module_deps, "io_bazel_rules_scala_scalactic")
use_repo(non_module_deps, "io_bazel_rules_scala_org_specs2_specs2_common")
use_repo(non_module_deps, "io_bazel_rules_scala_org_specs2_specs2_core")
use_repo(non_module_deps, "io_bazel_rules_scala_org_specs2_specs2_fp")
use_repo(non_module_deps, "io_bazel_rules_scala_org_specs2_specs2_matcher")
use_repo(non_module_deps, "io_bazel_rules_scala_junit_junit")
use_repo(non_module_deps, "io_bazel_rules_scala_org_hamcrest_hamcrest_core")
use_repo(non_module_deps, "io_bazel_rules_scala_org_specs2_specs2_junit")
use_repo(non_module_deps, "io_bazel")
use_repo(non_module_deps, "google_java_format")
use_repo(non_module_deps, "com_github_google_yapf")
use_repo(non_module_deps, "io_bazel_rules_scala_mustache")
use_repo(non_module_deps, "io_bazel_rules_scala_guava")
use_repo(non_module_deps, "io_bazel_rules_scala_javax_annotation_api")
use_repo(non_module_deps, "io_bazel_rules_scala_scopt")
use_repo(non_module_deps, "libthrift")
use_repo(non_module_deps, "io_bazel_rules_scala_scrooge_core")
use_repo(non_module_deps, "io_bazel_rules_scala_scrooge_generator")
use_repo(non_module_deps, "io_bazel_rules_scala_util_core")
use_repo(non_module_deps, "io_bazel_rules_scala_util_logging")
use_repo(non_module_deps, "org_scalameta_common")
use_repo(non_module_deps, "org_scalameta_fastparse")
use_repo(non_module_deps, "org_scalameta_fastparse_utils")
use_repo(non_module_deps, "org_scalameta_parsers")
use_repo(non_module_deps, "org_scalameta_scalafmt_core")
use_repo(non_module_deps, "org_scalameta_scalameta")
use_repo(non_module_deps, "org_scalameta_trees")
use_repo(non_module_deps, "org_typelevel_paiges_core")
use_repo(non_module_deps, "com_typesafe_config")
use_repo(non_module_deps, "org_scala_lang_scalap")
use_repo(non_module_deps, "com_thesamet_scalapb_lenses")
use_repo(non_module_deps, "com_thesamet_scalapb_scalapb_runtime")
use_repo(non_module_deps, "com_lihaoyi_fansi")
use_repo(non_module_deps, "com_lihaoyi_fastparse")
use_repo(non_module_deps, "org_scala_lang_modules_scala_collection_compat")
use_repo(non_module_deps, "com_lihaoyi_pprint")
use_repo(non_module_deps, "com_lihaoyi_sourcecode")
use_repo(non_module_deps, "com_google_protobuf_protobuf_java")
use_repo(non_module_deps, "com_geirsson_metaconfig_core")
use_repo(non_module_deps, "com_geirsson_metaconfig_typesafe_config")
use_repo(non_module_deps, "io_bazel_rules_scala_scala_parallel_collections")
use_repo(non_module_deps, "scalafmt_default")
use_repo(non_module_deps, "proto_cross_repo_boundary")
use_repo(non_module_deps, "org_apache_commons_commons_lang_3_5_without_file")
use_repo(non_module_deps, "com_twitter__scalding_date")
use_repo(non_module_deps, "com_google_guava_guava_21_0_with_file")
use_repo(non_module_deps, "com_github_jnr_jffi_native")
use_repo(non_module_deps, "org_apache_commons_commons_lang_3_5")
use_repo(non_module_deps, "com_google_guava_guava_21_0")
use_repo(non_module_deps, "org_springframework_spring_core")
use_repo(non_module_deps, "org_springframework_spring_tx")
use_repo(non_module_deps, "org_typelevel_kind_projector")
use_repo(non_module_deps, "org_typelevel__cats_core")

register_toolchains("@io_bazel_rules_scala//jmh:jmh_toolchain")
register_toolchains("@io_bazel_rules_scala//scala_proto:default_deps_toolchain")
register_toolchains("//testing:testing_toolchain")
register_toolchains("@io_bazel_rules_scala//scala:unused_dependency_checker_error_toolchain")
register_toolchains("@io_bazel_rules_scala//test/proto:scalapb_toolchain")
register_toolchains("@io_bazel_rules_scala//twitter_scrooge:scrooge_toolchain")
register_toolchains("@io_bazel_rules_scala//scala/scalafmt:scalafmt_toolchain")
